--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -361,6 +361,40 @@ En este ejemplo, C-space es obtenido por medio de agrandar los obstáculos por e
 	
 \end{frame}
 
+\begin{frame}
+	\frametitle{Rapidly Exploring Random Trees (RTTs)}
+	\note{Información extraída de slides Martin Saska}
+	
+	\begin{figure}
+		\subfloat[]
+		{
+			\fbox{\includegraphics[width=0.3\textwidth]{images/rrt_construction1.pdf}}
+		}\hspace{1em}
+		\subfloat[]
+		{
+			\fbox{\includegraphics[width=0.3\textwidth]{images/rrt_construction2.pdf}}
+		}\\
+		\subfloat[]
+		{
+			\fbox{\includegraphics[width=0.3\textwidth]{images/rrt_construction3.pdf}}
+		}\hspace{1em}
+		\subfloat[]
+		{
+			\fbox{\includegraphics[width=0.3\textwidth]{images/rrt_construction4.pdf}}
+		}\\
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Sampleo basado en control}
+	\note{Información extraída de slides Martin Saska}
+	
+	\begin{figure}
+		\includegraphics[width=0.5\textwidth]{images/rrt_control_based_sampling.pdf}
+	\end{figure}
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Global Planner vs Local Planner}
@@ -371,10 +405,7 @@ En este ejemplo, C-space es obtenido por medio de agrandar los obstáculos por e
 	
 \end{frame}
 
-\begin{frame}
-	\frametitle{Rapidly Exploring Random Trees (RTTs)}
-	
-\end{frame}
+
 
 \begin{frame}
 	\frametitle{Road Map Planning}
